Правки секции О компании

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg fixed-top navbar-default" >
         <div class="container">
-          <a class="navbar-brand" href="#page-top"><img class="img-adaptive" src="assets/img/logo.png"> </a>
+          <a class="navbar-brand" href="#page-top"><img class="img-adaptive" src="assets/img/logo.svg"> </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
           </button>
@@ -87,14 +87,13 @@
   <div class="inner cover">
     <div class="row">
       <div class="col-sm">
-        <h1 class="cover-heading maincolor">О КОМПАНИИ <img class="img-ico" src="assets/img/drawing.svg"></h1>
-        <br>
-        <p class="sans">"БОБРОВ кухни" - это 10 лет работы над сложными и большими заказами.<br>
+        <h1 class="cover-heading about-h1">О КОМПАНИИ <img class="img-ico" src="assets/img/drawing.svg"></h1>
+        <p class="sans about-text">"БОБРОВ кухни" - это 10 лет работы над сложными и большими заказами.<br>
           Отличное качество  в сочетании с ценой делает такой продут по истине уникальным. Изготавливаем кухни с использованием крашеных фасадов, фасадов из Акрилового пластика, фасадов окутанных плёнкой ПВХ. Выполняем работы в комплексе.</p>
-        <p class="lead">
+        <p class="about-mrg lead about-text">
           Фасады Российского производства дают  возможность купить кухонный гарнитур по более низкой цене и тем самым получить то гарантированное и ожидаемое
         </p>
-        <p class="sans">Мы в соц. сетях: <a href="#"><i class="fab fa-instagram"></i></a></p>
+        <p class="about-mrg sans about-text">Мы в соц. сетях: <a href="#"><i class="fab fa-instagram about-inst"></i></a></p>
       </div>
       <div class="col-sm"><img class="img-adaptive" src="assets/img/bober.svg"></div>
     </div>
