Правки секции Мы изготавливаем

--- a/index.html
+++ b/index.html
@@ -113,13 +113,14 @@
       <div class="line padding-center">
         <div class="container">
           <div class="inner cover centered">
-            <div class="row">
-              <div class="col-sm">
+            <div class="row no-gutter">
+              <div class="col-sm-4">
                 <h1 class="cover-heading text-white"><img class="img-ico" src="assets/img/drawing-flip.svg"> МЫ ИЗГОТАВЛИВАЕМ</h1>
               </div>
-              <div class="col-sm">
+              <div class="col-sm-4 crafting-mrg">
                 <p class="sans text-white">Кухoнную мебель, гардеробные, детские,<br> шкафы купе, тумбы Комплексные заказы.</p>
               </div>
+
             </div>
 
         </div>
@@ -393,6 +394,10 @@
 <script src="assets/js/bootstrap.min.js "></script>
 <script src="assets/js/jquery.fullpage.min.js "></script>
 <script src="assets/js/main.js "></script>
-
+<script>
+    window.FontAwesomeConfig = {
+        searchPseudoElements: true
+    }
+</script>
 </body>
 </html>
