--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
     <div style="background-image: url(assets/img/bg.png)" class="section tab-base padding">
       <div class="container">
         <div class="inner cover">
-          <h1 class="cover-heading maincolor">ПРОЦЕСС ПРОИЗВОДСТВА<br>МЕБЕЛИ НАЧИНАЕТСЯ <img class="img-ico" src="assets/img/drawing.svg"></h1>
+          <h1 class="cover-heading crafting-h1">ПРОЦЕСС ПРОИЗВОДСТВА<br>МЕБЕЛИ НАЧИНАЕТСЯ <img class="img-ico" src="assets/img/drawing.svg"></h1>
           <br>
-          <div class="container">
+          <div class="container about-text">
             <div class="row align-items-start">
               <div class="col">
                 <span class="crafting-number">1</span> <span class="crafting-line"> звонок клиента</span>
@@ -171,9 +171,9 @@
               </div>
             </div>
             <br>
-            <hr>
+            <hr class="crafting">
             <img class="img-adaptive" src="assets/img/iconpanel.png">
-            <hr>
+            <hr class="crafting">
           </div>
         </div>
       </div>
