Правки состояний при наведении

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" placeholder="Комментарий" rows="4"></textarea>
           </div>
           <div class="col-12 text-center">
-            <button type="submit" class="btn btn-success btn-lg submint-btn">ОТПРАВИТЬ</button>
+            <button type="submit" class="btn btn-success btn-lg submint-btn btn-contact-send">ОТПРАВИТЬ</button>
           </div>
         </form>
       </div>
