Правки шрифта в заголовке отзыва

--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
@@ -312,12 +312,12 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.5</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
@@ -329,12 +329,12 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
                   <div class="col-sm sans text-white">
-                    <h4>Петров О.И.</h4>
+                    <h4 class="oswald">Петров О.И.</h4>
                     <p>Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Задача организации, в особенности же рамки и место обучения кадров </p>
                     <b>20.08.2018</b>
                   </div>
