Правки цвета индикаторов слайдера

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h1 class="cover-heading maincolor">НАШИ НОВИНКИ И АКЦИИ <img class="img-ico" src="assets/img/drawing.svg"></h1>
         <br>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
+          <ol class="carousel-indicators carousel-indicators-promo">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
