Правка расстояний иконок в шапке

--- a/index.html
+++ b/index.html
@@ -18,26 +18,18 @@
 </head>
 
 <body>
-
-
-
-
 <div id="fullpage">
-
-
-<div class="section section1 tab-base">
-  <div class="vidbg">
-  <video id="myVideo" loop muted data-autoplay>
-    <source src="assets/bober.mp4" type="video/mp4">
-    <!--<source src="imgs/flowers.webm" type="video/webm">-->
-  </video>
-  <div class="layer">
-    <h1 class="layer-text text-center">КУХНИ ИЗ МАССИВА<br><img class="img-ico" src="assets/img/drawing-flip.svg"> ПО ЦЕНЕ МДФ <img class="img-ico" src="assets/img/drawing.svg"></h1>
+  <div class="section section1 tab-base">
+    <div class="vidbg">
+    <video id="myVideo" loop muted data-autoplay>
+      <source src="assets/bober.mp4" type="video/mp4">
+      <!--<source src="imgs/flowers.webm" type="video/webm">-->
+    </video>
+    <div class="layer">
+      <h1 class="layer-text text-center">КУХНИ ИЗ МАССИВА<br><img class="img-ico" src="assets/img/drawing-flip.svg"> ПО ЦЕНЕ МДФ <img class="img-ico" src="assets/img/drawing.svg"></h1>
+    </div>
+    </div>
   </div>
-  </div>
-</div>
-
-    
     <div style="background-image: url(assets/img/bg.png)" class="section padding tab-base cloud-gradient">
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg fixed-top navbar-default" >
@@ -73,14 +65,14 @@
                 <a class="nav-link nav-link-menu" href="#contact">Контакты</a>
               </li>
               <li class="nav-item nav-item-menu">
-                <a class="nav-link nav-link-menu" href="#"><img src="assets/img/ico-inst.svg"></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-link-menu" href="#"><img src="assets/img/ico-mail.svg"></a>
+                  <div class="nav-icons">
+                      <a class="nav-link-menu" href="#"><img src="assets/img/ico-inst.svg"></a>
+                      <a class="nav-link-menu" href="#"><img src="assets/img/ico-mail.svg"></a>
+                  </div>
               </li>
               <li class="nav-item nav-item-menu rightlink">
                 <b class="number">+ 7 800 80-80-80</b><br>
-                <button type="button" class="btn btn-outline-dark btn-sm btn-contact">Обратная связь</button>
+                <a href="#contact" class="btn btn-outline-dark btn-sm btn-contact">Обратная связь</a>
               </li>
             </ul>
           </div>
