--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" href="assets/css/jquery.fullpage.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
 
-  
+
 </head>
 
 <body>
@@ -66,13 +67,13 @@
               </li>
               <li class="nav-item nav-item-menu">
                   <div class="nav-icons">
-                      <a class="nav-link-menu" href="#"><img src="assets/img/ico-inst.svg"></a>
-                      <a class="nav-link-menu" href="#"><img src="assets/img/ico-mail.svg"></a>
+                      <a class="nav-link-menu" href="#"><i class="fab fa-instagram round"></i></a>
+                      <a class="nav-link-menu" href="#"><i class="far fa-envelope roundmail"></i></a>
                   </div>
               </li>
               <li class="nav-item nav-item-menu rightlink">
                 <b class="number">+ 7 800 80-80-80</b><br>
-                <a href="#contact" class="btn btn-outline-dark btn-sm btn-contact">Обратная связь</a>
+                <a href="#contact" class="btn btn-outline-dark btn-sm btn-contact"><span class="uptext">Обратная связь</span></a>
               </li>
             </ul>
           </div>
@@ -116,6 +117,20 @@
             </div>
 
         </div>
+
+      </div>
+
+    </div>
+    <div class="">
+      <div class="slider">
+        <span><img width="1220px" height="720px" src="assets/img/slider-1.png"></span>
+        <span><img width="620px" height="720px" src="assets/img/slider-2.png"></span>
+        <span><img width="620px" height="720px" src="assets/img/slider-2.png"></span>
+        <span><img width="520px" height="720px" src="assets/img/slider-1.png"></span>
+        <span><img width="520px" height="720px" src="assets/img/slider-1.png"></span>
+        <span><img width="520px" height="720px" src="assets/img/slider-1.png"></span>
+
+
       </div>
     </div>
 
@@ -374,22 +389,42 @@
   
 </div>
 
-
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-  integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-  crossorigin="anonymous"></script>
+<script src="assets/js/jquery-3.3.1.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
 <script src="assets/js/bootstrap.min.js "></script>
 <script src="assets/js/jquery.fullpage.min.js "></script>
 <script src="assets/js/main.js "></script>
-<script>
-    window.FontAwesomeConfig = {
-        searchPseudoElements: true
-    }
+<script type="text/javascript" src="assets/js/slick.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('.slider').slick({
+            centerMode: true,
+            centerPadding: '0px',
+            slidesToShow: 3,
+            dots:true,
+            adaptiveHeight: true,
+            responsive: [
+                {
+                    breakpoint: 768,
+                    settings: {
+                        arrows: false,
+                        centerMode: true,
+                        centerPadding: '40px',
+                        slidesToShow: 3
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        arrows: false,
+                        centerMode: true,
+                        centerPadding: '40px',
+                        slidesToShow: 1
+                    }
+                }
+            ]
+        });
+    });
 </script>
 </body>
 </html>
