--- a/index.html
+++ b/index.html
@@ -361,12 +361,12 @@
         <div class="row">
           <div class="col-sm">
             <nav class="nav">
-              <a class="nav-link footer-menu" href="#">О компании</a>
-              <a class="nav-link footer-menu" href="#">Наши работы</a>
-              <a class="nav-link footer-menu" href="#">Производство</a>
-              <a class="nav-link footer-menu" href="#">Отзывы</a>
-              <a class="nav-link footer-menu" href="#">Акции</a>
-              <a class="nav-link footer-menu" href="#">Контакты</a>
+              <a class="nav-link footer-menu" href="#about">О компании</a>
+              <a class="nav-link footer-menu" href="#portfolio">Наши работы</a>
+              <a class="nav-link footer-menu" href="#crafting">Производство</a>
+              <a class="nav-link footer-menu" href="#comments">Отзывы</a>
+              <a class="nav-link footer-menu" href="#promo">Акции</a>
+              <a class="nav-link footer-menu" href="#contact">Контакты</a>
             </nav>
           </div>
           <div class="col-sm">
