--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-sm">
+          <div class="col-sm-7">
             <nav class="nav">
               <a class="nav-link footer-menu" href="#about">О компании</a>
               <a class="nav-link footer-menu" href="#portfolio">Наши работы</a>
@@ -370,13 +370,13 @@
             </nav>
           </div>
           <div class="col-sm">
-            <p class="float-right">
-              <b class="nav-link footer-menu">+7 800 80-80-80</b>
-              <a class="nav-link nav-item-menu" href="#"><i class="fab fa-instagram fabmail"></i></a>
-              <a class="nav-link nav-item-menu" href="#"><i class="far fa-envelope"></i></a>
-              <a class="nav-link"><button type="button" class="btn btn-outline-light">Обратная связь</button></a>
-            </p>
 
+            <p class="float-right nav-link">
+              <b class="footer-menu footer-margin">+7 800 80-80-80</b>
+              <a class="footericons footer-mrico" href="#"><i class="fab fa-instagram roundfooter"></i></a>
+              <a class="footericons" href="#"><i class="far fa-envelope roundmailfooter"></i></a>
+              <a class="#"><button type="button" class="btn btn-outline-light btn-footer">Обратная связь</button></a>
+            </p>
           </div>
         </div>
 
